overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,11 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
 }
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
 h1,
 h2,
 h3 {
